--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a website",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --watch",
-    "prod": "webpack-dev-server --mode production --watch",
+    "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server",
+    "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
   },
   "babel": {
@@ -29,16 +29,16 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "url-loader": "^1.0.1"
   },
   "dependencies": {
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
