--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
@@ -36,6 +37,8 @@
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-particles": "0.0.3",
+    "react-particles-js": "^2.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "webpack": "^4.1.0",
