--- a/src/js/assets/particlesjs-config.json
+++ b/src/js/assets/particlesjs-config.json
@@ -1,7 +1,7 @@
 {
   "particles": {
     "number": {
-      "value": 80,
+      "value": 20,
       "density": {
         "enable": true,
         "value_area": 800
@@ -72,7 +72,7 @@
     "events": {
       "onhover": {
         "enable": true,
-        "mode": "grab"
+        "mode": "repulse"
       },
       "onclick": {
         "enable": true,
@@ -95,8 +95,8 @@
         "speed": 3
       },
       "repulse": {
-        "distance": 200,
-        "duration": 0.4
+        "distance": 100,
+        "duration": 0.7
       },
       "push": {
         "particles_nb": 4
