updated webpack to support aliases, added health data to health page

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.10",
+    "csv-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
+    "lodash": "^4.17.5",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
