--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server",
     "dev": "webpack-dev-server --mode development",
+    "server": "node server",
     "build": "webpack --mode production",
     "postinstall": "npm run build"
   },
@@ -31,7 +32,9 @@
     "json-loader": "^0.5.7",
     "lodash": "^4.17.5",
     "node-sass": "^4.7.2",
+    "query-string": "^6.0.0",
     "sass-loader": "^6.0.7",
+    "spotify-web-api-js": "^0.23.0",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1"
   },
@@ -43,6 +46,7 @@
     "react-particles-js": "^2.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "spotify-web-api-node": "^3.0.0",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
