--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "url-loader": "^1.0.1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "history": "^4.7.2",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-particles": "0.0.3",
