--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "This is a website",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server",
+    "server": "./node_modules/webpack/bin/webpack.js -p --progress && node server",
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
     "dev": "webpack-dev-server --mode development",
     "prod": "webpack-dev-server --mode production",
-    "server": "node server",
     "build": "webpack --mode production",
     "postinstall": "npm run build"
   },
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "concurrently": "^3.5.1",
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
