--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.2.0",
     "react-particles": "0.0.3",
     "react-particles-js": "^2.1.0",
+    "react-responsive-modal": "^2.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "spotify-web-api-node": "^3.0.0",
