--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nagata-site",
+  "name": "portfolio-site",
   "version": "1.0.0",
-  "description": "This is a website",
+  "description": "This is my portfolio website",
   "main": "webpack.config.js",
   "scripts": {
     "start": "node server.js",
@@ -42,6 +42,7 @@
     "cookie-parser": "^1.4.3",
     "history": "^4.7.2",
     "npm": "^5.7.1",
+    "progressbar.js": "^1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-particles": "0.0.3",
