pushing a few updates to loading and error handling. Broke out header into its own file

--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "history": "^4.7.2",
     "npm": "^5.7.1",
     "progressbar.js": "^1.0.1",
+    "rc-progress": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-particles": "0.0.3",
     "react-particles-js": "^2.1.0",
+    "react-progressbar.js": "^0.2.0",
     "react-responsive-modal": "^2.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
