--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-responsive-modal": "^2.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-table": "^6.8.0",
     "spotify-web-api-node": "^3.0.0",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
