--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.5",
@@ -39,7 +40,9 @@
     "url-loader": "^1.0.1"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "^1.4.3",
+    "google-maps-react": "^2.0.0",
     "history": "^4.7.2",
     "npm": "^5.7.1",
     "progressbar.js": "^1.0.1",
