--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url-loader": "^1.0.1"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.1.0",
     "cookie-parser": "^1.4.3",
     "google-maps-react": "^2.0.0",
     "history": "^4.7.2",
